Changes for Perl extension SDL-Tutorial-3DWorld

0.19 Mon 20 Dec 2010
	- Added a "God Mode" flying camera

0.18 Sun 19 Dec 2010
	- Moving the landscape to a typical 2000-era infinite ground plane,
	  but with a more detailed texture than in that era.
	  Unfortunately, the new ground plane means our skybox looks wrong
	  now, as it was never designed for use with a ground plane.
	- Reorganised some internals so we don't need to export from OpenGL
	  so much. This will be removed later, once OpenGL fixes it constants.
	- Added support for tiling textures with SDL::Tutorial::3DWorld::Tile

0.17 Sat 18 Dec 2010
	- Added preliminary support for loading models from RWX files

0.16 Sat 18 Dec 2010
	- Switch from manual GL display list code to OpenGL::List
	- Implemented left shift for "running"

0.15 Fri 17 Dec 2010
	- Because we can be fairly certain that TextureCube (i.e. crates)
	  will be popular, use that class to demonstrate the use of OpenGL
	  display lists via glGenLists(), glNewList(), and glCallList().
	- Noting that, of all things, glLineWidth() is insanely expensive.

0.14 Fri 17 Dec 2010
	- Actors are now rendered in random order to expose any places
	  where material property state management is being done badly.
	- Added some simple utility methods for getting paths to files
	  and directories in the share directory.
	- Added a TextureCube package for creating floor-origin rotatable
	  resizable cubes with the same (and correctly oriented) texture
	  on each face. Which is to say...
	- Fear the mighty Crate! Weep! Swoon!

0.13 Fri 17 Dec 2010
	- Factored the teapot-specific logic into a separate class
	- Added a new "grid cube" actor which demonstrates points, lines,
	  multiple element actors and grid-snapping for worlds which
	  inherently consist of a cube space (think original Wolfenstein).
	- When a texture is displayed it now inherently defends itself
	  against being altered by previous alpha channel settings of
	  other objects.