@@ -2,6 +2,11 @@ Changes for Perl extension SDL-Tutorial-3DWorld
 
 0.19 Mon 20 Dec 2010
 	- Added a "God Mode" flying camera
+	- Added ->current static method to ::3DWorld to get currently
+	  world. Removes the need to pass things like the camera around
+	  everywhere all the time.
+	- The skybox now locates the camera via ->current->camera instead
+	  having to be passed the camera.
 
 0.18 Sun 19 Dec 2010
 	- Moving the landscape to a typical 2000-era infinite ground plane,
